--- a/front/index.html
+++ b/front/index.html
@@ -6,10 +6,19 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Groupomania</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+  <script src="https://kit.fontawesome.com/fed78bb2e8.js" crossorigin="anonymous"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+
+    * {
+      font-family: 'Lato', sans-serif;
+    }
+  </style>
 </head>
 
-<body>
-  <div id="root"></div>
+<body id="root">
+  <!--<div id="root"></div>-->
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
