--- a/front/index.html
+++ b/front/index.html
@@ -17,8 +17,8 @@
   </style>
 </head>
 
-<body id="root">
-  <!--<div id="root"></div>-->
+<body>
+  <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
